--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "painel-retoque",
   "version": "1.0.0",
+  "description": "Servidor WebSocket para o painel de retoque",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "ws": "^8.5.0"
+    "ws": "^8.17.0"
   }
 }
+
 
   
